# zs

./: README.md  pyproject.toml  x.py
.github/workflows/: increment-ver.yml  repo-tracker.yml
src/zs/core/: __init__.py  __main__.py  index.json
src/zs/kvstore/: __init__.py  cli.py  fileprop.py
