[project]
name = "zs"
version = "0.1.5"
description = "zack's personal shell"
authors = [
    { name = "ZackaryW", email = "gitzackw@gmail.com" }
]
dependencies = [
    "zuu>=7.0.0",
    "click>=8.1.8",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"zs.kvstore" = "zs.kvstore.cli:cli"
zs = "zs.core.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "zs-get-current-coord @ git+https://github.com/z-uu/zs.get-current-coord.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zs"]
include = ["zs/core/index.json"]
